--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-u need to install ur own tele bot, u can ask botfather in telegram
-u need to have ur own api key
-
-just edit the variables which one u need.
+python-telegram-bot==20.3
+requests==2.31.0
